Setup controllers for Customer and Partner

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-spring.application.name=LaunderUp_Backend
+spring.application.firstname=LaunderUp_Backend
+spring.r2dbc.url=r2dbc:mysql://localhost:3306/yourdatabase
+spring.r2dbc.username=yourusername
+spring.r2dbc.password=yourpassword
+spring.r2dbc.pool.enabled=true
