--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.launderup</groupId>
 	<artifactId>LaunderUp_Backend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>LaunderUp_Backend</name>
+	<firstname>LaunderUp_Backend</firstname>
 	<description>Backend for Laundry Services app</description>
 	<url/>
 	<licenses>
@@ -37,6 +37,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-r2dbc</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>dev.miku</groupId>
+			<artifactId>r2dbc-mysql</artifactId>
+			<version>0.8.2.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
